--- a/scapeRoom/scapeRoomMVC.html
+++ b/scapeRoom/scapeRoomMVC.html
@@ -128,58 +128,58 @@
             </div>
 
             <div class="div30"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="1">
                 <img src="question.png">
                 </div>
             </div>
             <div class="div31"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="2">
                     <img src="question.png">
                 </div>
             </div>
             <div class="div32">
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="3">
                     <img src="question.png">
                     </div> </div>
             <div class="div33"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="4">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div34"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="5">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div35"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="6">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div36"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="7">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div37"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="8">
                     <img src="question.png">
                 </div>
             </div>
 
             <div class="div38"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="9">
                     <img src="question.png">
                 </div>
             </div>
 
             <div class="div39"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="10">
                     <img src="question.png">
                 </div>
             </div>
             <div class="div40"> 
-                <div class="blocoQuestao">
+                <div class="blocoQuestao" data-bloco="11">
                     <img src="question.png">
                 </div>
             </div>
@@ -194,6 +194,314 @@
             <img src="pixil-frame-0 (1).png">             
         </div>
         
+
+        <div class="pergunta1">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas1">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta2">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        2-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas2">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta3">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        3-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas3">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta4">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        4-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas4">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta5">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        5-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas5">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta6">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        6-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas6">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta7">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        7-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas7">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta8">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        8-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas8">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta9">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        9-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas9">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta10">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        10-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas10">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="pergunta11">
+            <div class="caixaPergunta1">
+                <textoPergunta>
+                    <p>
+                        11-Palmeiras não tem ...?
+                    </p>
+                </textoPergunta>
+            </div>
+            <br><br><br>
+            <div class="caixaRespostas11">
+                <div class="respostaA">
+                    <p>A - paulista</p>
+                </div>
+
+                <div class="respostaB">
+                    <p>B - Taça rio</p>
+                </div>
+
+                <div class="respostaC">
+                    <p> C - Mundial</p>
+                </div>
+
+                <div class="respostaD">
+                    <p>D - Cachaça</p>
+                </div>
+            </div>
+        </div>
 
     </div>
 
