--- a/scapeRoom/scapeRoomMVC.html
+++ b/scapeRoom/scapeRoomMVC.html
@@ -128,58 +128,58 @@
             </div>
 
             <div class="div30"> 
-                <div class="blocoQuestao" data-bloco="1">
+                <div class="blocoQuestao" data-bloco="0">
                 <img src="question.png">
                 </div>
             </div>
             <div class="div31"> 
-                <div class="blocoQuestao" data-bloco="2">
+                <div class="blocoQuestao" data-bloco="1">
                     <img src="question.png">
                 </div>
             </div>
             <div class="div32">
-                <div class="blocoQuestao" data-bloco="3">
+                <div class="blocoQuestao" data-bloco="2">
                     <img src="question.png">
                     </div> </div>
             <div class="div33"> 
-                <div class="blocoQuestao" data-bloco="4">
+                <div class="blocoQuestao" data-bloco="3">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div34"> 
-                <div class="blocoQuestao" data-bloco="5">
+                <div class="blocoQuestao" data-bloco="4">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div35"> 
-                <div class="blocoQuestao" data-bloco="6">
+                <div class="blocoQuestao" data-bloco="5">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div36"> 
-                <div class="blocoQuestao" data-bloco="7">
+                <div class="blocoQuestao" data-bloco="6">
                     <img src="question.png">
                     </div>
             </div>
             <div class="div37"> 
-                <div class="blocoQuestao" data-bloco="8">
+                <div class="blocoQuestao" data-bloco="7">
                     <img src="question.png">
                 </div>
             </div>
 
             <div class="div38"> 
-                <div class="blocoQuestao" data-bloco="9">
+                <div class="blocoQuestao" data-bloco="8">
                     <img src="question.png">
                 </div>
             </div>
 
             <div class="div39"> 
-                <div class="blocoQuestao" data-bloco="10">
+                <div class="blocoQuestao" data-bloco="9">
                     <img src="question.png">
                 </div>
             </div>
             <div class="div40"> 
-                <div class="blocoQuestao" data-bloco="11">
+                <div class="blocoQuestao" data-bloco="10">
                     <img src="question.png">
                 </div>
             </div>
@@ -502,6 +502,23 @@
                 </div>
             </div>
         </div>
+
+    <div class="vida1">
+        <img src="pixil-frame-0 (3).png">
+    </div>
+
+    <div class="vida2">
+        <img src="pixil-frame-0 (3).png">
+    </div>
+
+    <div class="vida3">
+        <img src="pixil-frame-0 (3).png">
+    </div>
+
+    <div class="gameOver">
+        <img src="pixil-frame-0 (4).png">
+    </div>
+
 
     </div>
 
