--- a/scapeRoom/scapeRoomMVC.html
+++ b/scapeRoom/scapeRoomMVC.html
@@ -199,26 +199,26 @@
             <div class="caixaPergunta1">
                 <textoPergunta>
                     <p>
-                        Palmeiras não tem ...?
+                        1- O padrão de arquitetura MVC tem por objetivo...
                     </p>
                 </textoPergunta>
             </div>
             <br><br><br>
             <div class="caixaRespostas1">
                 <div class="respostaA">
-                    <p>A - paulista</p>
+                    <p>A - Separar a lógica de apresentação dos dados</p>
                 </div>
 
                 <div class="respostaB">
-                    <p>B - Taça rio</p>
+                    <p>B - Gerenciar o banco de dados</p>
                 </div>
 
                 <div class="respostaC">
-                    <p> C - Mundial</p>
+                    <p> C - Manipular as requisições HTTP</p>
                 </div>
 
                 <div class="respostaD">
-                    <p>D - Cachaça</p>
+                    <p>D - Definir a estrutura das tabelas do banco de dados</p>
                 </div>
             </div>
         </div>
@@ -227,26 +227,26 @@
             <div class="caixaPergunta1">
                 <textoPergunta>
                     <p>
-                        2-Palmeiras não tem ...?
+                        2- Qual a principal função da Model no padrão MVC ?
                     </p>
                 </textoPergunta>
             </div>
             <br><br><br>
             <div class="caixaRespostas2">
                 <div class="respostaA">
-                    <p>A - paulista</p>
+                    <p>A - Responsável pela interação com a interface do usuário</p>
                 </div>
 
                 <div class="respostaB">
-                    <p>B - Taça rio</p>
+                    <p>B - Responsável pela lógica de negócio e manipulação dos dados</p>
                 </div>
 
                 <div class="respostaC">
-                    <p> C - Mundial</p>
+                    <p> C - Responsável pela renderização da interface do usuário</p>
                 </div>
 
                 <div class="respostaD">
-                    <p>D - Cachaça</p>
+                    <p>D - Responsável pela manipulação das requisições e respostas HTTP</p>
                 </div>
             </div>
         </div>
@@ -255,26 +255,26 @@
             <div class="caixaPergunta1">
                 <textoPergunta>
                     <p>
-                        3-Palmeiras não tem ...?
+                        3- Qual a principal função da Controller no padrão MVC?
                     </p>
                 </textoPergunta>
             </div>
             <br><br><br>
             <div class="caixaRespostas3">
                 <div class="respostaA">
-                    <p>A - paulista</p>
+                    <p>A - Responsável pela interação com a interface do usuário</p>
                 </div>
 
                 <div class="respostaB">
-                    <p>B - Taça rio</p>
+                    <p>B - Responsável pela lógica de negócio e manipulação dos dados</p>
                 </div>
 
                 <div class="respostaC">
-                    <p> C - Mundial</p>
+                    <p> C - Responsável pela renderização da interface do usuário</p>
                 </div>
 
                 <div class="respostaD">
-                    <p>D - Cachaça</p>
+                    <p>D - Responsável pela manipulação das requisições e respostas HTTP</p>
                 </div>
             </div>
         </div>
@@ -283,26 +283,26 @@
             <div class="caixaPergunta1">
                 <textoPergunta>
                     <p>
-                        4-Palmeiras não tem ...?
+                        4- Por que utilizar o padrão MVC em desenvolvimento de sistemas? 
                     </p>
                 </textoPergunta>
             </div>
             <br><br><br>
             <div class="caixaRespostas4">
                 <div class="respostaA">
-                    <p>A - paulista</p>
+                    <p>A - Facilita a comunicação entre o cliente e o servidor</p>
                 </div>
 
                 <div class="respostaB">
-                    <p>B - Taça rio</p>
+                    <p>B - Torna o código mais organizado e modular</p>
                 </div>
 
                 <div class="respostaC">
-                    <p> C - Mundial</p>
+                    <p> C - Reduz a quantidade de memória utilizada pelo sistema</p>
                 </div>
 
                 <div class="respostaD">
-                    <p>D - Cachaça</p>
+                    <p>D - Aumenta a velocidade de processamento das requisições</p>
                 </div>
             </div>
         </div>
@@ -519,7 +519,11 @@
         <img src="pixil-frame-0 (4).png">
     </div>
 
-
+    <div class="cronometro">
+        <span id="minutos">20</span> :
+        <span id="segundos">00</span>
+      </div>
+      
     </div>
 
     
